--- a/src/Css/Chart.css
+++ b/src/Css/Chart.css
@@ -1,6 +1,25 @@
 .chart {
-    background: blue;
     width: 90%;
-    min-height: 425px;
+    height: 5000px;
     margin: auto;
+}
+
+.btnBox {
+    margin-left: 70px;
+}
+
+.searchBtn {
+    border: none;
+    cursor: pointer;
+    height: 30px;
+    width: 80px;
+    margin-left: 10px;
+    border-radius: 4px;
+    color: rgb(95, 95, 95);
+    outline: none;
+}
+
+.select {
+    background: rgb(100, 99, 99);
+    color: rgb(219, 219, 219);
 }
